Translated into English

--- a/backend/WebAPI_Funcionario/WebAPI_Funcionario/appsettings.json
+++ b/backend/WebAPI_Funcionario/WebAPI_Funcionario/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ALMEIDA\\SQLEXPRESS;database=Funcionario;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=ALMEIDA\\SQLEXPRESS;Database=Funcionario;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "AllowedHosts": "*"
 }
